# n00b

./: .clang-format  .dockerignore  .gitignore  .sanitize_ignore  CLAUDE.md  Doxyfile.in  LICENSE  README.md  SESSION_RECKONING.md  TODO.md  audit-rules.bnf  build.sh  meson.build  meson.options  run_windows_subset.bat  run_windows_tests.bat
bootstrap/: meson.build  meson.options
bootstrap/include/: argv_parse.h  base_alloc_shim.h  branch_symbols.h  buf.h  compile.h  dict.h  emit.h  futex.h  lex.h  macros.h  modernize.h  ncc_limits.h  nt_types.h  parse.h  parse_internal.h  pipe_io.h  prefix_xform.h  rewrite.h  sha256.h  st.h  token.h  transform.h  types.h  xform.h  xform_helpers.h
bootstrap/src/: .#output.c  argv_parse.c  buf.c  compile_common.c  compile_packrat.c  dict.c  emit.c  lex.c  mod_token_xforms.c  mod_tree_xforms.c  modernize.c  ncc.c  output.c  parse.c  parse_support.c  pipe_io.c  prefix_xform.c  rewrite.c  sha256.c  st.c  st_register.c  transform.c  type_normalize.c  utils.c  xform_bang.c  xform_constexpr.c  xform_constexpr_paste.c  xform_flatten.c  xform_helpers.c  xform_keyword.c  xform_kw_call.c  xform_once.c  xform_package.c  xform_rstr.c  xform_typehash.c  xform_typeid.c  xform_typestr.c  xform_vargs.c  xforms.c
bootstrap/test/: run_test.sh  t_builtin_offsetof.c  t_constexpr.c  t_error.c  t_kw_args.c  t_no_ncc.c  t_passthrough.c  t_preprocess.c  t_rstr.c  t_typeid.c
examples/quic_acme_demo/: main.c  meson.build
examples/quic_acme_http01_demo/: main.c  meson.build
examples/quic_echo/: main.c  meson.build  setup_dev_pki.sh  teardown_dev_pki.sh
examples/quic_server_managed/: main.c  meson.build
ncc/: meson.build  meson.options
ncc/grammars/: c_ncc.bnf
ncc/include/: n00b.h  ncc_runtime.h
ncc/include/core/: align.h  alloc.h  array.h  atomic.h  (+12 more)
ncc/src/: ncc.c
ncc/test/: err_bang_at_file_scope.c  err_bang_missing_parens.c  err_bang_void_fn.c  err_constexpr_bad_expr.c  err_constexpr_min_one_arg.c  err_constexpr_paste_bad_frag.c  err_constexpr_wrong_args.c  err_missing_semicolon.c  err_once_non_function.c  err_rstr_bad_tag.c  err_typeid_no_args.c  run_test.sh  test_bang.c  test_bnf.c  test_constexpr.c  test_generic_struct.c  test_gs_result.c  test_gs_result.h  test_gs_result_user.h  test_kargs.c  test_kargs_vargs.c  test_option.c  test_pwz.c  test_rstr.c  test_vargs.c  test_xform_template.c
src/attest/: cli.c  dsse.c  error.c  json_util.c  mark.c  meson.build  n00b_attest_module.c  n00b_attest_xdg.c  signer.c  statement.c  verifier.c
src/aws/: meson.build  n00b_aws_sns.c  n00b_aws_sqs.c  n00b_aws_sts.c
src/chalk/: base32v.c  certs.c  codec_table.c  elf.c  elf_fallback.c  file_io.c  gguf.c  gguf_core.c  init.c  lang_table.c  macho.c  macho_core.c  macho_parse.c  macho_stream.c  macos_wrap.c  mark.c  meson.build  normalize.c  pe.c  pyc.c  resign_identity.c  resign_macho.c  resign_macho_darwin.m  resign_pe.c  safetensors.c  safetensors_core.c  sidecar.c  source.c  zip.c
src/clickhouse/: meson.build  n00b_clickhouse_client.c  n00b_clickhouse_module.c  n00b_clickhouse_query.c
src/conduit/: conduit.c  fd_managed.c  fd_writer.c  file.c  file_change.c  io.c  io_epoll.c  io_kqueue.c  io_poll.c  io_uring.c  io_wsa.c  meson.build  print.c  proc_lifecycle.c  service.c  signal.c  socket.c  socket_udp.c  subproc.c  subproc_windows.c  subscription.c  thread_lifecycle.c  timer.c  user_event.c  xform.c  xform_ansi_strip.c  xform_hexdump.c  xform_http.c  xform_json.c  xform_linebuf.c  xform_marshal.c  xform_render.c
src/core/: .#memory_info.c  alloc.c  arena.c  buffer.c  builtin_types.c  callstack.c  condition.c  crash.c  data_lock.c  dict.c  dict_untyped.c  env.c  exit.c  file.c  file_map.c  gc.c  gc_map.c  gc_root.c  gc_type_map.c  hash.c  init.c  interval_tree.c  layout.c  lock_accounting.c  memory_info.c  meson.build  mmaps.c  mutex.c  pool.c  rwlock.c  sha512.c  static_image.c  static_objects.c  std_streams.c  string.c  stw.c  thread.c  time.c  type_registry.c  xxhash_wrap.c
src/display/: diagnostics.c  event_dispatch.c  event_loop.c  focus.c  hexdump.c  hexdump_contracts.c  layout.c  meson.build  mouse.c  scene_contracts.c  terminal_lifecycle.c  widget.c
src/logic/: asp_engine.c  asp_intern.c  asp_relation.c  asp_rule.c  clpfd_domain.c  clpfd_label.c  clpfd_store.c  logic_dsl.c  logic_program.c  meson.build
src/ml/: meson.build  ml_core.c  ml_eval.c  ml_inspect.c  ml_io.c  ml_layered.c  ml_monitor.c  ml_presets.c  ml_score.c  ml_train.c
src/n00b/: embed.c  embed_ffi.c  eval.c  meson.build  n00b_compile.c  n00b_compile_link.c  n00b_module_loader.c  n00b_objfile_emit.c  n00b_tokenizer.c  n00b_type_map.c  n00b_type_spec.c
src/naudit/: blame.c  cli.c  engine.c  exemption.c  filter.c  guidance.c  languages.c  meson.build  module.c  output.c  output_json.c  preprocess.c  rule_file_tokenizer.c  signing_ux.c  tokenizer_registry.c  trust_root.c
src/parsers/: ijson.c  json.c  json_contract.c  json_tokenizer.c  lisp_tokenizer.c  meson.build  scan_recipes.c  scanner.c  shell_tokenizer.c  text_tokenizer.c  token_stream.c  tokenizer_registry.c  toml.c
src/slay/: analyze.c  annot_cf.c  annot_scope.c  annot_symtab.c  annot_types.c  annot_walk.c  annotation.c  bnf.c  c_tokenizer.c  cdg.c  cfg.c  codegen.c  codegen_builtins.c  codegen_mir.c  commander.c  commander_json.c  commander_tok.c  debug.c  dfg.c  diagnostic.c  earley.c  earley_forest.c  grammar.c  grammar_image.c  hashset.c  infer.c  infer_expr.c  meson.build  n00b_parse.c  n00b_tokenizer.c  parse_forest.c  parse_tree.c  pprint.c  pwz.c  rewrite.c  symtab.c  token_id_hash.c  transform.c  tree_util.c  unicode_class.c
src/util/: assert.c  base64.c  der_encode.c  dynamic_lib.c  errno_str.c  marshal.c  meson.build  path.c  pkcs7.c  queue.c  worker_pool.c  x509_walk.c
src/vfs/: backend.c  backend_local.c  backend_memory.c  cache.c  frontend.c  frontend_fuse.c  frontend_nfs.c  hooks.c  meson.build  types.c  vfs.c
subprojects/monocypher/: README.n00b.md  meson.build
subprojects/n00b-aws-shim/: Cargo.toml  cbindgen.toml
subprojects/picoquic/: meson.build
subprojects/picotls/: meson.build
(+1858 files in other folders)
